# GenericI2C

./: .gitmodules  CMakeLists.txt  Makefile  README.md
example/writeByteATMEGA168/: Makefile
example/writeByteATMEGA168/src/: main.c
inc/: I2C.h  I2C_HAL.h  I2C_HAL_AVR.h  I2C_HAL_DESKTOP.h  I2C_HAL_STM32.h  i2c.h
src/: I2C.c  I2C_HAL_AVR_Impl.c  I2C_HAL_Desktop_Impl.cpp  I2C_HAL_STM32_Impl.cpp
