cmake_minimum_required(VERSION 3.20)
project(GenericI2C DESCRIPTION "Software-based I2C implementation for AVR and STM32 platforms with desktop support for development.")

if(TARGET_PLATFORM STREQUAL "DESKTOP")
  add_library(GenericI2C SHARED src/I2C.c src/I2C_HAL_Desktop_Impl.cpp)
  find_package(RapidJSON)
  target_link_libraries(GenericI2C ${RapidJSON_LIBRARIES})
  target_compile_definitions(GenericI2C PUBLIC DESKTOP=1)
  target_include_directories(GenericI2C PUBLIC inc/)
elseif(TARGET_PLATFORM STREQUAL "AVR")
  add_avr_library(GenericI2C src/I2C.c src/I2C_HAL_AVR_Impl.c)
  avr_target_include_directories(GenericI2C PUBLIC inc/)
elseif(TARGET_PLATFORM STREQUAL "STM32")
  message(STATUS "Building for STM32")
  add_library(GenericI2C src/I2C.c src/I2C_HAL_STM32_Impl.cpp)
  target_include_directories(GenericI2C PUBLIC inc/)
  add_dependencies(GenericI2C libopencm3)
else()
  message(FATAL_ERROR "Invalid TARGET_PLATFORM: ${TARGET_PLATFORM}")
endif()

